[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/Upgrade_Button/Button.gd" type="Script" id=1]
[ext_resource path="res://ui/Font/Prototype.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/Font/Gentax.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0509804, 0.0392157, 0.172549, 1 )

[sub_resource type="Animation" id=2]
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 2, 2, 2, 1 ), Color( 1.13333, 1.13333, 1.13333, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "update_fields"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "upgrade_animation_ended" ],
"method": "emit_signal"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Button" type="Button"]
margin_right = 348.387
margin_bottom = 570.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "shine (copy)"
anims/shine = SubResource( 2 )
"anims/shine (copy)" = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -10.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="VBoxContainer"]
margin_right = 348.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Name"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
show_behind_parent = true
margin_left = 4.0
margin_top = 104.0
margin_right = 344.0
margin_bottom = 404.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 340, 300 )
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
visible = false
margin_top = 368.0
margin_right = 476.0
margin_bottom = 525.0
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="Effect" type="Label" parent="VBoxContainer"]
margin_left = 4.0
margin_top = 408.0
margin_right = 344.0
margin_bottom = 437.0
rect_min_size = Vector2( 340, 20 )
size_flags_horizontal = 6
custom_fonts/font = SubResource( 5 )
text = "Effect:"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Atribute_descrption" type="Label" parent="VBoxContainer"]
margin_left = 4.0
margin_top = 441.0
margin_right = 344.0
margin_bottom = 470.0
rect_min_size = Vector2( 340, 20 )
size_flags_horizontal = 6
custom_fonts/font = SubResource( 5 )
text = "Effect:"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade_descrption" type="Label" parent="VBoxContainer"]
margin_left = 4.0
margin_top = 474.0
margin_right = 344.0
margin_bottom = 503.0
rect_min_size = Vector2( 340, 20 )
size_flags_horizontal = 6
custom_fonts/font = SubResource( 5 )
text = "Effect:"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelVBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 507.0
margin_right = 348.0
margin_bottom = 507.0
size_flags_horizontal = 3
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Awakening" type="Label" parent="VBoxContainer/LabelVBoxContainer"]
visible = false
margin_right = 476.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
text = "Awakening"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bonus1" type="Label" parent="VBoxContainer/LabelVBoxContainer"]
visible = false
margin_right = 476.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
text = "Unlock First Stage"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bonus2" type="Label" parent="VBoxContainer/LabelVBoxContainer"]
visible = false
margin_right = 476.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
text = "Unlock Second Stage"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Bonus3" type="Label" parent="VBoxContainer/LabelVBoxContainer"]
visible = false
margin_right = 476.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
text = "Unlock Third Stage"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="button_up" from="." to="." method="_on_Button_button_up"]
